Add event retrieval backend (#56)
